# Lab-Sidecar

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRODUCT_ITERATION_PLAN.md  README.md  SECURITY.md  deep-research-report.md  gemini-report.md  pyproject.toml
.agents/plugins/: marketplace.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: alpha3-sidecar-context-benchmark-agent-goal.md  alpha3-sidecar-context-benchmark-data.json  alpha3-sidecar-context-benchmark.md  alpha3-sidecar-context-scale-benchmark-data.json  alpha3-sidecar-context-scale-benchmark-plan.md  alpha3-sidecar-context-scale-benchmark.md  alpha4-bounded-chart-fallback-benchmark-data.json  alpha4-bounded-chart-fallback-benchmark.md  alpha4-bounded-chart-fallback-operator-guide.md  alpha4-bounded-chart-fallback-plan.md  alpha4-phase-4-1-fallback-request-diagnostics-acceptance.md  alpha4-phase-4-2-chart-worker-contract-sandbox-acceptance.md  alpha4-phase-4-3-validator-adoption-acceptance.md  alpha4-phase-4-4-benchmark-extension-acceptance.md  alpha4-phase-4-5-docs-operator-ux-acceptance.md  architecture.md  artifact-protocol.md  chart-guidelines.md  cli-spec.md  codex-worker-adapter-plan.md  comparison-artifact-acceptance.md  comparison-artifacts.md  current-scope.md  data-to-chart-benchmark-data.json  data-to-chart-benchmark.md  demo-public-alpha.md  design-goals-completion-plan.md  design-goals-gap-matrix.md  design-goals-phase-1-acceptance.md  design-goals-phase-2-acceptance.md  design-goals-phase-3-acceptance.md  design-goals-phase-4-acceptance.md  design-goals-phase-5-acceptance.md  design-goals-phase-6-acceptance.md  experiment-scenario-fixtures.md  experiment-scenario-sidecar-v1-acceptance.md  experiment-scenario-sidecar-v1-plan.md  experiment-scenario-summary-audit.md  experiment-scenario-summary-contract.md  experiment-scenario-summary-examples.md  (+59 more)
examples/algorithm-benchmark/: README.md  results.json
examples/csv-comparison/: README.md  baseline.csv  model_a.csv  model_b.csv
examples/json-benchmark-results/: README.md  metrics.yaml  results.json
examples/json-benchmark-results/debug/: debug.json
examples/json-benchmark-results/extra/: skipped-records.json
examples/messy-csv-results/: README.md  metrics.yaml
examples/messy-csv-results/debug/: debug_metrics.csv
examples/messy-csv-results/notes/: readme.txt
examples/messy-csv-results/runs/baseline/seed_1/: history.csv
examples/messy-csv-results/runs/baseline/seed_2/: history.csv
examples/messy-csv-results/runs/candidate-a/run_101/: metrics.csv
examples/messy-csv-results/scratch/: scratch.csv
examples/project-presentation-pack/: README.md  ablation.json  final_metrics.csv  project_goal.md  weekly_metrics.csv
examples/simple-failure/: README.md  fail.py
examples/simple-success/: README.md  metrics.csv  train.py
lab_sidecar/: __init__.py
lab_sidecar/cli/: __init__.py  app.py
lab_sidecar/collectors/: __init__.py  config.py  csv_collector.py  fields.py  json_collector.py  scan.py  scenario_summary.py  service.py
lab_sidecar/comparisons/: __init__.py  models.py  package_export.py  paths.py  service.py  validation.py
lab_sidecar/core/: artifacts.py  config.py  manifest.py  models.py  paths.py  provenance.py  traceability.py  validation.py
lab_sidecar/figures/: __init__.py  fallback_worker.py  render.py  service.py  specs.py
lab_sidecar/intelligence/: __init__.py  adoption.py  ai_policy.py  ai_provider.py  bundle.py  heuristic_worker.py  paths.py  preview.py  sandbox.py  schemas.py  tools.py  validator.py  worker_invocation.py
lab_sidecar/mcp/: __init__.py  responses.py  safety.py  server.py  tools.py
lab_sidecar/reports/: __init__.py  service.py  templates.py
lab_sidecar/runner/: process.py  service.py  spec.py  worker.py
lab_sidecar/slides/: __init__.py  service.py
lab_sidecar/storage/: __init__.py  artifact_store.py  package_export.py  sqlite_index.py
plugins/lab-sidecar/: .mcp.json
plugins/lab-sidecar/.codex-plugin/: plugin.json
plugins/lab-sidecar/skills/use-lab-sidecar/: SKILL.md
scripts/: alpha4_bounded_chart_fallback_benchmark.py  cli_full_smoke.py  data_to_chart_benchmark.py  mcp_stdio_smoke.py  release_asset_smoke.py  release_check.py  wheel_smoke.py
tests/: test_artifact_contract_golden_fixtures.py  test_cli_full_smoke_script.py  test_cli_smoke.py  test_collection_summary_contract.py  test_collector_bad_inputs.py  test_comparison_artifacts.py  test_data_to_chart_benchmark.py  test_docs_scope.py  test_figure_summary_contract.py  test_figures_specs.py  test_manifest_contract.py  test_mcp_tools.py  test_package_contract.py  test_package_verify.py  test_real_sample_robustness.py  test_release_asset_smoke_script.py  test_release_check_script.py  test_report_summary_contract.py  test_scenario_summary.py  test_scenario_summary_contract.py  test_slides_summary_contract.py  test_traceability_contract.py  test_v2_ai_provider.py  test_v2_heuristic_worker.py  test_v2_host_integration.py  test_v2_intelligence_scaffold.py  test_v2_worker_invocation.py  test_validate_command.py  test_wheel_smoke_script.py
tests/fixtures/artifact_contract/v1/: artifact-index.json  manifest.json  package-summary.json
(+4 files in other folders)
