[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lab-sidecar"
version = "0.1.0"
description = "Local-first research sidecar for AI agents and experiment workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Lab-Sidecar maintainers" },
]
keywords = ["experiments", "cli", "artifacts", "reports", "figures", "agents", "research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Utilities",
]
dependencies = [
  "matplotlib>=3.8",
  "pandas>=2.2",
  "Pillow>=10.0",
  "pydantic>=2.7",
  "python-pptx>=0.6.23",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
mcp = [
  "mcp==1.27.2",
]

[project.scripts]
lab-sidecar = "lab_sidecar.cli.app:main"
labsidecar = "lab_sidecar.cli.app:main"

[project.urls]
Homepage = "https://github.com/King-A23/Lab-Sidecar"
Documentation = "https://github.com/King-A23/Lab-Sidecar/tree/main/docs"
Changelog = "https://github.com/King-A23/Lab-Sidecar/blob/main/CHANGELOG.md"
Issues = "https://github.com/King-A23/Lab-Sidecar/issues"
Security = "https://github.com/King-A23/Lab-Sidecar/blob/main/SECURITY.md"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["lab_sidecar"]

[tool.hatch.build.targets.sdist]
include = [
  "/lab_sidecar",
  "/tests",
  "/examples",
  "/docs",
  "/README.md",
  "/CHANGELOG.md",
  "/CONTRIBUTING.md",
  "/LICENSE",
  "/SECURITY.md",
  "/pyproject.toml",
]
