[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lab-sidecar"
version = "0.1.2"
description = "Local-first research sidecar for AI agents and experiment workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Lab-Sidecar maintainers" },
]
keywords = ["experiments", "cli", "artifacts", "reports", "figures", "agents", "research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Utilities",
]
dependencies = [
  "matplotlib>=3.8",
  "pandas>=2.2",
  "Pillow>=10.0",
  "pydantic>=2.7",
  "python-pptx>=0.6.23",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=2.1.0",
  "pytest>=8.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.18",
  "types-PyYAML>=6.0",
]
mcp = [
  "mcp==1.27.2",
]

[project.scripts]
lab-sidecar = "lab_sidecar.cli.app:main"
labsidecar = "lab_sidecar.cli.app:main"

[project.urls]
Homepage = "https://github.com/King-A23/Lab-Sidecar"
Documentation = "https://github.com/King-A23/Lab-Sidecar/tree/main/docs"
Changelog = "https://github.com/King-A23/Lab-Sidecar/blob/main/CHANGELOG.md"
Issues = "https://github.com/King-A23/Lab-Sidecar/issues"
Security = "https://github.com/King-A23/Lab-Sidecar/blob/main/SECURITY.md"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E9", "F"]

[tool.ruff.lint.per-file-ignores]
"lab_sidecar/collectors/service.py" = ["F402"]
"lab_sidecar/figures/specs.py" = ["F601"]
"lab_sidecar/intelligence/schemas.py" = ["F401"]
"lab_sidecar/slides/service.py" = ["F841"]
"tests/test_cli_smoke.py" = ["F841"]
"tests/test_mcp_tools.py" = ["F401"]
"tests/test_scenario_summary.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
files = [
  "lab_sidecar/core",
  "lab_sidecar/runner",
  "lab_sidecar/storage",
]
show_error_codes = true
warn_unused_configs = true

[tool.coverage.run]
source = ["lab_sidecar"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.hatch.build.targets.wheel]
packages = ["lab_sidecar"]

[tool.hatch.build.targets.sdist]
include = [
  "/lab_sidecar",
  "/tests",
  "/examples",
  "/docs",
  "/scripts",
  "/README.md",
  "/CHANGELOG.md",
  "/CONTRIBUTING.md",
  "/LICENSE",
  "/SECURITY.md",
  "/pyproject.toml",
]
